Issues with whitespace

--- a/homework/Homework-1/flask_app/static/main/css/footer.css
+++ b/homework/Homework-1/flask_app/static/main/css/footer.css
@@ -3,5 +3,6 @@
     text-justify: justify;
     text-align: center;
     margin-top: auto;
+    padding-top: 1%;
 
 }
