--- a/homework/Homework-1/flask_app/static/main/css/header.css
+++ b/homework/Homework-1/flask_app/static/main/css/header.css
@@ -12,5 +12,7 @@
     padding: 0%;
     width: 100vw;
     height: 10vh;
+    max-width: 100%;
+
     display: block;
 }
