--- a/homework/Homework-1/flask_app/static/main/css/navbar.css
+++ b/homework/Homework-1/flask_app/static/main/css/navbar.css
@@ -2,6 +2,7 @@
     background-color: #000000;
     margin: 0%;
     width: 100vw;
+    max-width: 100%;
     height: 8vh;
     padding: 0%;
     margin: 0%;
@@ -33,6 +34,8 @@
 
 .navitems {
     margin: 1%;
+    max-width: 100%;
+ 
 
 }
 
@@ -63,6 +66,7 @@
     background-color: none;
 
 } 
+
 
 #linkedinText {
     display: none;
